# persistence

./: .gitignore  CMakeLists.txt
source/: .dir-locals.el  DirectedGraph.hpp  PartialDirectedGraph.hpp  TableVersions.hpp  main.cpp
source/persistence/: partial_directed_graph.hpp
source/pointer_machine/: CMakeLists.txt  directed_graph.hpp
source/pointer_machine/test/: CMakeLists.txt  directed_graph_test.cpp
